[gd_scene load_steps=6 format=3 uid="uid://10vgkrej1sdb"]

[ext_resource type="Theme" uid="uid://blt1eyj3xshax" path="res://assets/UI/themes/UI-elements/panel-container-secondary.tres" id="1_cissl"]
[ext_resource type="Script" path="res://UI/dialog/dialog-choice-ui.gd" id="1_w0whr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upvqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2hue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wuhj"]

[node name="DialogChoice" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -93.0
offset_right = 325.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cissl")
script = ExtResource("1_w0whr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LocationChoiceContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/LocationChoiceContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_upvqm")

[node name="Title" type="Label" parent="MarginContainer/LocationChoiceContainer/PanelContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/LocationChoiceContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_j2hue")

[node name="Description" type="Label" parent="MarginContainer/LocationChoiceContainer/PanelContainer2"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 0
autowrap_mode = 2

[node name="ChoiceRequirements" type="HBoxContainer" parent="MarginContainer/LocationChoiceContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_6wuhj")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
